[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diesel-heater-ble"
version = "0.2.28"
description = "BLE protocol library for diesel heaters (Vevor, Hcalory, Sunster, HeaterCC)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Spettacolo83"},
]
keywords = [
    "bluetooth",
    "ble",
    "diesel-heater",
    "vevor",
    "hcalory",
    "sunster",
    "heatercc",
    "home-assistant",
    "iot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/Spettacolo83/diesel-heater-ble"
Repository = "https://github.com/Spettacolo83/diesel-heater-ble"
Documentation = "https://github.com/Spettacolo83/diesel-heater-ble#readme"
Issues = "https://github.com/Spettacolo83/diesel-heater-ble/issues"
Changelog = "https://github.com/Spettacolo83/diesel-heater-ble/releases"

[tool.setuptools.packages.find]
where = ["src"]
include = ["diesel_heater_ble*"]

[tool.setuptools.package-data]
diesel_heater_ble = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "UP", "B", "SIM", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
